# evolutionary-computing

./: .gitignore  .ocamlformat  SETUP.md  corniedj-himmelblau-100-20-0_001-0_60.txt  corniedj-rosenbrock-1000-64-0_001-0_60.txt  dune-project  es_output.txt  es_plot.gp  ga_plot.gp
assignments/assignment1/: assignment1.ml  assignment1_writeup.md  corniedj-max-ones-1000-32-0_01-0_5.txt  dune  task1.ml  task2.ml  task3.ml
assignments/assignment2/: assignment2.ml  dune  task1.ml  task2.ml  task3.ml
assignments/assignment3/: assignment3_es.ml  assignment3_sga.ml  dune
assignments/test_install/: dune  test_install.ml
util/: dune  output.ml  plot.ml  rand.ml  test_funcs.ml
